Revise keywords and add header for SEO enhancement
Updated keywords meta tag and added header for better SEO and user information.

--- a/index.html
+++ b/index.html
@@ -10,32 +10,45 @@
   <title>Mechanic Setu - Emergency Auto Repair Guides & Technical Resources</title>
   <meta name="description"
     content="Explore expert-curated mechanical guides, emergency repair tips, and technical resources. Mechanic Setu empowers students and professionals in automotive and mechanical engineering.">
-  <meta name="keywords"
-    content="mechanical engineering, auto repair, Mechanic Setu, emergency guides, technical resources, mechanical notes, repair tutorials, automotive study materials, engineering help, workshop manuals, mechanical assignments, semester notes, PDF downloads">
-  <meta name="keywords"
-    content="mechanical engineering, auto repair, Mechanic Setu, emergency guides, technical resources, mechanical notes, repair tutorials, automotive study materials, engineering help, workshop manuals, mechanical assignments, semester notes, PDF downloads, mechanical projects, vehicle maintenance, engine repair, transmission systems, hydraulics, pneumatics, mechanical troubleshooting, free mechanical notes, semester 4 mechanical, semester 5 mechanical, mechanicsetu, mechanic setu platform">
+ <meta name="keywords"
+    content="emergency roadside assistance Gujarat, ahmedabad mechanic , nehrunagar mechanic, mechanic nearby, how to fix flat tire, nearest puncture shop Ahmedabad, mechanical engineering semester 5 study materials, automobile workshop manuals PDF, vehicle maintenance guides, engine troubleshooting tutorials, verified mechanics Ahmedabad, Mechanic Setu platform">
   <meta name="author" content="Mechanic Setu Team, Man Navlakha">
 <link rel="stylesheet" href="https://apis.mappls.com/mappls-gl/v1/mappls-gl.css" />
 <script src="https://apis.mappls.com/mappls-gl/v1/mappls-gl.js"></script>
-  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "SoftwareApplication",
-  "name": "Mechanic Setu",
-  "author": {
-    "@type": "Person",
-    "name": "Man Navlakha"
-  },
-  "description": "Emergency auto repair guides and technical resources for mechanical engineering students and professionals.",
-  "applicationCategory": "EducationalApplication, BusinessApplication",
-  "operatingSystem": "Web",
-  "offers": {
-    "@type": "Offer",
-    "price": "0",
-    "priceCurrency": "INR"
-  }
+  "@graph": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Mechanic Setu",
+      "author": {
+        "@type": "Person",
+        "name": "Man Navlakha"
+      },
+      "description": "Emergency auto repair guides and technical resources for mechanical engineering students and professionals.",
+      "applicationCategory": "EducationalApplication, BusinessApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "INR"
+      }
+    },
+    {
+      "@type": "Service",
+      "name": "Emergency Roadside Assistance Locator",
+      "provider": {
+        "@type": "Organization",
+        "name": "Mechanic Setu"
+      },
+      "areaServed": {
+        "@type": "State",
+        "name": "Gujarat"
+      },
+      "description": "Connecting users with verified mechanics for emergency puncture repair and vehicle troubleshooting."
+    }
+  ]
 }
-</script>
 </head>
 
 <body>
@@ -47,7 +60,10 @@
   <script src="https://apis.mappls.com/advancedmaps/api/a645f44a39090467aa143b8da31f6dbd/map_sdk_plugins/v3.0.2/mappls.js" defer></script>
   
 
-
+<header style="display:none;">
+  <h1>Mechanic Setu: Your Bridge to Mechanical Engineering Resources and Emergency Auto Repair in Gujarat</h1>
+  <p>Providing semester notes, workshop manuals, and real-time mechanic locations for students and drivers.</p>
+</header>
   
 </body>
 
